# python-project-83

./: .gitignore  Makefile  README.md  build.sh  database.sql  pyproject.toml
page_analyzer/: app.py  db.py  parser.py  validator.py
page_analyzer/src/: db.py  parser.py
page_analyzer/templates/: base.html  get_url.html  index.html  urls.html
page_analyzer/templates/blocks/: base.html  head.html  header.html  messages.html
page_analyzer/templates/get_url/: index.html
page_analyzer/templates/urls/: index.html
